modules/noosphere/taghmata/nixidy/manifests/prod/zitadel/Deployment-zitadel.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/component: start
    app.kubernetes.io/instance: zitadel
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: zitadel
    app.kubernetes.io/version: ""
    helm.sh/chart: zitadel-9.13.0
  name: zitadel
  namespace: zitadel
spec:
  replicas: 3
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app.kubernetes.io/component: start
      app.kubernetes.io/instance: zitadel
      app.kubernetes.io/name: zitadel
  template:
    metadata:
      annotations:
        checksum/configmap: b8f1916a6235ed10ae4d79f0fdcbb381d55323f737de293612605dd5f6d9a7a3
        checksum/secret-db-ssl-ca-crt: 01ba4719c80b6fe911b091a7c05124b64eeece964e09c058ef8f9805daca546b
        checksum/secret-zitadel-secrets: e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855
        prometheus.io/path: /debug/metrics
        prometheus.io/port: "8080"
        prometheus.io/scrape: "true"
      labels:
        app.kubernetes.io/component: start
        app.kubernetes.io/instance: zitadel
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/name: zitadel
        app.kubernetes.io/version: ""
        helm.sh/chart: zitadel-9.13.0
    spec:
      containers:
        - args:
            - start
            - --config
            - /config/zitadel-config-yaml
            - --masterkeyFromEnv
          image: ghcr.io/zitadel/zitadel:v4.2.0
          imagePullPolicy: IfNotPresent
          livenessProbe:
            failureThreshold: 3
            httpGet:
              httpHeaders:
                - name: Host
                  value: zitadel.noosphere.uk
              path: /debug/healthz
              port: http2-server
              scheme: HTTP
            initialDelaySeconds: 0
            periodSeconds: 5
          name: zitadel
          ports:
            - containerPort: 8080
              name: http2-server
              protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              httpHeaders:
                - name: Host
                  value: zitadel.noosphere.uk
              path: /debug/ready
              port: http2-server
              scheme: HTTP
            initialDelaySeconds: 0
            periodSeconds: 5
          resources: {}
          securityContext:
            privileged: false
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            runAsUser: 1000
          startupProbe:
            failureThreshold: 30
            httpGet:
              httpHeaders:
                - name: Host
                  value: zitadel.noosphere.uk
              path: /debug/ready
              port: http2-server
              scheme: HTTP
            periodSeconds: 1
          volumeMounts:
            - mountPath: /config
              name: zitadel-config-yaml
              readOnly: true
      enableServiceLinks: false
      securityContext:
        fsGroup: 1000
        runAsNonRoot: true
        runAsUser: 1000
      serviceAccountName: zitadel
      volumes:
        - configMap:
            name: zitadel-config-yaml
          name: zitadel-config-yaml
