modules/noosphere/taghmata/nixidy/manifests/prod/zitadel/Ingress-zitadel-ip-root.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    category: security
    cert-manager.io/cluster-issuer: letsencrypt-cloudflare
    glance/description: Identity Provider
    glance/icon: di:z/itadel
    glance/id: zitadel
    glance/name: zitadel
    glance/parent: zitadel
    glance/url: https://zitadel.noosphere.uk
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
  name: zitadel-ip-root
  namespace: zitadel
spec:
  ingressClassName: traefik
  rules:
    - host: zitadel.noosphere.uk
      http:
        paths:
          - backend:
              service:
                name: zitadel
                port:
                  number: 8080
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - zitadel.noosphere.uk
      secretName: zitadel-tls
