modules/noosphere/taghmata/nixidy/manifests/prod/zitadel/Ingress-zitadel.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: GRPC
  labels:
    app.kubernetes.io/instance: zitadel
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: zitadel
    app.kubernetes.io/version: ""
    helm.sh/chart: zitadel-9.13.0
  name: zitadel
  namespace: zitadel
spec:
  ingressClassName: traefik
  rules:
    - host: zitadel.noosphere.uk
      http:
        paths:
          - backend:
              service:
                name: zitadel
                port:
                  number: 8080
            path: /
            pathType: Prefix
